syntax = "proto3";

package filesystem;

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/filesystem/protos";

////////////////////////////////////////////////////////////////////////////////

message FilesystemId {
    string ZoneId = 1;
    string FilesystemId = 2;
}
