syntax = "proto3";

package datacloud.console.v1;

import "datacloud/logs/v1/log.proto";
import "datacloud/v1/paging.proto";

option go_package = "a.yandex-team.ru/cloud/mdb/datacloud/private_api/datacloud/console/v1;console";
option java_package = "doublecloud.priv.console.v1";
option java_outer_classname = "DCLS";

service LogService {
    // Like Read from public logs service, but without gRPC streaming
    rpc ListLogs (ListLogsRequest) returns (ListLogsResponse);
}

message ListLogsRequest {
    oneof selector {
        // Paging information from previous calls, it contains Criteria info.
        datacloud.v1.NextPage paging = 1;

        // Log selection criteria.
        logs.v1.Criteria criteria = 2;
    };
}

message ListLogsResponse {
    // Requested log string
    repeated logs.v1.LogRecord records = 1;

    // Pagination information of the response, containing criteria.
    datacloud.v1.NextPage next_page = 2;
}
